--- a/package.json
+++ b/package.json
@@ -14,15 +14,15 @@
     "axios": "^1.6.2",
     "date-fns": "^2.30.0",
     "expo": "~49.0.7",
-    "expo-dev-client": "~2.4.10",
+    "expo-dev-client": "~2.4.12",
     "expo-location": "~16.1.0",
     "expo-splash-screen": "~0.20.5",
     "expo-status-bar": "~1.6.0",
     "expo-updates": "~0.18.17",
     "react": "18.2.0",
-    "react-native": "0.72.6",
-    "react-native-safe-area-context": "^4.7.4",
-    "react-native-screens": "^3.27.0"
+    "react-native": "0.72.5",
+    "react-native-safe-area-context": "4.6.3",
+    "react-native-screens": "~3.22.0"
   },
   "devDependencies": {
     "@babel/core": "^7.20.0",
