--- a/package.json
+++ b/package.json
@@ -13,7 +13,7 @@
     "@react-navigation/native-stack": "^6.9.17",
     "axios": "^1.6.2",
     "date-fns": "^2.30.0",
-    "expo": "~49.0.7",
+    "expo": "^49.0.21",
     "expo-dev-client": "~2.4.12",
     "expo-location": "~16.1.0",
     "expo-splash-screen": "~0.20.5",
