--- a/package.json
+++ b/package.json
@@ -21,6 +21,7 @@
     "expo-updates": "~0.18.19",
     "react": "18.2.0",
     "react-native": "0.72.6",
+    "react-native-dotenv": "^3.4.9",
     "react-native-safe-area-context": "4.6.3",
     "react-native-screens": "~3.22.0"
   },
